<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MobileGlues</string>

    <string name="info_author" translatable="false">Swung, BZLZHH, Tungsten</string>
    <string name="info_copyright" translatable="false">GNU LGPL-2.1 License</string>
    <string name="info_launcher" translatable="false">Fold Craft Launcher (>=1.2.0.5)\nZalith Launcher (>=1.4.0)\nPojav Glow·Worm (>=20250211)</string>
    <string name="info_logo" translatable="false">Aou156</string>

    <string name="view_version">Version: </string>
    <string name="view_author">Developers: </string>
    <string name="view_copyright">License: </string>
    <string name="view_launcher">Compatible Launchers: </string>
    <string name="view_logo">Logo By:</string>

    <string name="open_options">Modify renderer settings</string>

    <string name="menu_item_about">About</string>

    <string name="option_glsl_cache">Max GLSL Cache Size (enter -1 to disable)</string>
    <string name="option_glsl_cache_helper">Unit: Megabytes (MB)</string>
    <string name="option_angle">Use ANGLE as OpenGL ES driver</string>
    <string name="option_angle_disable_if_possible">Prefer Disabled</string>
    <string name="option_angle_enable_if_possible">Prefer Enabled</string>
    <string name="option_angle_disable">Disable</string>
    <string name="option_angle_enable">Enable</string>

    <string name="option_glsl_cache_error_invalid">Error: invalid number.</string>
    <string name="option_glsl_cache_error_unexpected">Error: unexpected error.</string>
    <string name="option_glsl_cache_error_range">Error: number cannot be 0 or less than -1.</string>

    <string name="option_no_error">OpenGL Error Setting</string>
    <string name="option_no_error_auto">Auto</string>
    <string name="option_no_error_enable">Do not ignore</string>
    <string name="option_no_error_disable_pri">Ignore shader/program error</string>
    <string name="option_no_error_disable_sec">Ignore shader/program/framebuffer error</string>

    <string name="option_multidraw_mode">MultiDraw Emulation</string>
    <string name="option_multidraw_mode_auto">Auto</string>
    <string name="option_multidraw_mode_indirect">Prefer Indirect</string>
    <string name="option_multidraw_mode_basevertex">Prefer BaseVertex</string>
    <string name="option_multidraw_mode_multidraw_indirect">Prefer MultiDraw Indirect</string>
    <string name="option_multidraw_mode_drawelements">Force DrawElements</string>
    <string name="option_multidraw_mode_compute">Prefer Compute (experimental)</string>

    <string name="option_angle_clear_workaround">ANGLE Depth Clear Workaround</string>
    <string name="option_angle_clear_workaround_disable">Disable</string>
    <string name="option_angle_clear_workaround_enable_1">Enable workaround #1</string>

    <string name="option_ext_gl43">Enable Incomplete \'OpenGL43\' Extension</string>
    <string name="option_ext_cs">Enable Incomplete \'ARB_compute_shader\' Extension</string>
    <string name="option_ext_timer_query">Disable Recommended \'timer_query\' Extension</string>
    <string name="option_ext_direct_state_access">Enable Advanced \'direct_state_access\' Extension</string>
    <string name="option_enable_fsr1" tools:ignore="Typos">(Experimental) Enable built-in FSR1</string>

    <string name="option_custom_gl_version">Custom target OpenGL Version</string>
    <string name="warning_enabling_custom_gl_version"><b><big>⚠️ Important Notice:</big></b>\n\n
 • Setting a custom OpenGL version may <b><font color="@android:color/holo_red_dark">cause game crashes or rendering issues — proceed with caution</font></b>!\n
 • If any issues occur, please <b><font color="@android:color/holo_red_dark">disable this feature</font></b> first!\n
 • Once you enable this feature, we will <b><font color="@android:color/holo_red_dark">no longer accept</font></b> any bug reports related to additional issues! Before reporting problems, please make sure to <b><font color="@android:color/holo_red_dark">disable this feature</font></b>!\n
 • For stability, <b>do not enable this feature</b> unless absolutely necessary (e.g., mods requiring specific OpenGL versions)!</string>

    <string name="dialog_positive">OK</string>
    <string name="dialog_negative">Cancel</string>
    <string name="dialog_github">GitHub Release</string>
    <string name="dialog_sponsor">Sponsor</string>

    <string name="dialog_info">App Info</string>

    <string name="dialog_permission_title">Permission Required</string>
    <string name="dialog_permission_path_error_title">Permission Required</string>
    <string name="dialog_permission_msg">It looks like you denied the permission request for MobileGlues.\nYou must grant \'external storage\' permission to modify the renderer settings.\n\nPlease find and grant this permission on the next screen.</string>
    <string name="dialog_permission_msg_android_Q">Modifying rendering options requires read and write permissions. Please grant read and write permissions before making changes.\nYou will need to select this directory later: \n%s\nIf a folder named MG does not exist, please create one manually.</string>

    <string name="dialog_title_warning">Warning</string>
    <string name="warning_ext_gl43_enable">Enabling the incomplete OpenGL43 extension may cause issues with some shaders and mods. Are you sure you want to continue?</string>
    <string name="warning_ext_cs_enable">Enabling the incomplete ARB_compute_shader extension may cause issues with some shaders and mods. Are you sure you want to continue?</string>
    <string name="warning_adreno_740_angle">Enabling ANGLE on Adreno 740 devices is highly likely to cause severe rendering issues. Are you sure you want to continue?</string>
    <string name="warning_enabling_angle_clear_workaround">Enabling the ANGLE Depth Clear Workaround fixes the issue of the handheld items being obscured in vanilla Minecraft 1.21.5+, but may cause performance degradation. Are you sure you want to continue?</string>
    <string name="warning_fsr1_enable">Enabling the built-in FSR1 may cause image corruption on some drivers.\nIf your device is equipped with an Adreno GPU, please enable ANGLE to ensure correct rendering.\nIt is known that enabling this feature together with ANGLE can cause performance degradation, so please enable with caution.</string>
    <string name="warning_load_failed">Failed to load MG config!</string>
    <string name="warning_save_failed">Failed to save MG config!</string>
    <string name="warning_path_selection_error">Path error! Please select: \n%1$s\nbut you selected:\n%2$s</string>

    <string name="menu_item_remove">Remove MobileGlues related files</string>
    <string name="remove_mg_files_title">Remove MobileGlues related files</string>
    <string name="remove_mg_files_message">This action will completely delete all files associated with MobileGlues. This includes:\n\n
 • <b>All configuration files:</b> Any of your custom settings, preferences, and possible configuration files required for the application to run will be removed.\n
 • <b>Cache files:</b> The GLSL cache generated by MobileGlues during runtime (used to speed up loading) will be cleared.\n
 • <b>Log files:</b> Log files generated during the operation of MobileGlues will be deleted.\n
 • <b>Folder access permissions:</b> The read and write access permissions that the MobileGlues app currently has to specific folders in the device\'s storage will be revoked.\n\n
Please note, this action is <b><font color="@android:color/holo_red_dark">irreversible</font></b>. Once you click "OK", all the files mentioned above will be permanently deleted and cannot be recovered. If you are going to use MobileGlues again in the future, you will need to reconfigure it.\n\n
<b><font color="@android:color/holo_red_dark">Are you sure you want to continue?</font></b></string>
    <string name="ok">OK</string>
    <string name="ok_with_countdown">OK (%d s)</string>
    <string name="removing_mobileglues">Removing MobileGlues…</string>
    <string name="deleting_config">Deleting config files…</string>
    <string name="deleting_cache">Deleting cache files…</string>
    <string name="deleting_logs">Deleting log files…</string>
    <string name="cleaning_directory">Cleaning directory…</string>
    <string name="removing_permissions">Removing permissions…</string>
    <string name="remove_failed">Remove failed: %s</string>
    <string name="remove_complete_title">Removal Complete</string>
    <string name="remove_complete_message">MobileGlues related files have been completely removed.\nIf you need to completely remove MobileGlues from your device, please uninstall this software.</string>
    <string name="exit">Exit</string>
    <string name="info_mg_info">MobileGlues Info</string>
    <string name="button_view_gl_info">Check</string>
    <string name="loading">Loading…</string>
    <string name="dialog_mg_gl_info_title">MobileGlues Info</string>
    <string name="dismiss">Dismiss</string>
</resources>