<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_collapseMode="pin"
            app:title="@string/app_name"
            app:titleCentered="true" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:ignore="SpeakableTextPresentCheck">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/option_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_max_glsl_cache_size_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:hint="@string/option_glsl_cache"
                app:counterEnabled="true"
                app:errorEnabled="true"
                app:helperText="@string/option_glsl_cache_helper"
                app:helperTextEnabled="true"
                app:layout_constraintBottom_toTopOf="@+id/text_option_angle"
                app:placeholderText="32">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_max_glsl_cache_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/text_option_angle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/option_angle"
                app:layout_constraintBottom_toTopOf="@+id/spinner_angle"
                app:layout_constraintStart_toStartOf="parent" />

            <Spinner
                android:id="@+id/spinner_angle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:minHeight="48dp"
                app:layout_constraintBottom_toTopOf="@+id/text_option_no_error" />

            <TextView
                android:id="@+id/text_option_no_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/option_no_error"
                app:layout_constraintBottom_toTopOf="@+id/spinner_no_error"
                app:layout_constraintStart_toStartOf="parent" />

            <Spinner
                android:id="@+id/spinner_no_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:minHeight="48dp"
                app:layout_constraintBottom_toTopOf="@+id/text_option_multidraw_mode" />

            <TextView
                android:id="@+id/text_option_multidraw_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/option_multidraw_mode"
                app:layout_constraintBottom_toTopOf="@+id/spinner_multidraw_mode"
                app:layout_constraintStart_toStartOf="parent" />

            <Spinner
                android:id="@+id/spinner_multidraw_mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:minHeight="48dp"
                app:layout_constraintBottom_toTopOf="@+id/text_option_gl_version" />

            <TextView
                android:id="@+id/text_option_gl_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/option_custom_gl_version"
                app:layout_constraintBottom_toTopOf="@+id/spinner_custom_gl_version"
                app:layout_constraintStart_toStartOf="parent" />

            <Spinner
                android:id="@+id/spinner_custom_gl_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:minHeight="48dp"
                app:layout_constraintBottom_toTopOf="@+id/text_angle_clear_workaround" />

            <TextView
                android:id="@+id/text_angle_clear_workaround"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/option_angle_clear_workaround"
                app:layout_constraintBottom_toTopOf="@+id/angle_clear_workaround"
                app:layout_constraintStart_toStartOf="parent" />

            <Spinner
                android:id="@+id/angle_clear_workaround"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:minHeight="48dp"
                app:layout_constraintBottom_toTopOf="@+id/switch_ext_gl43" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/switch_ext_gl43"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option_ext_gl43"
                app:layout_constraintBottom_toTopOf="@+id/switch_ext_cs" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/switch_ext_cs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option_ext_cs"
                app:layout_constraintBottom_toTopOf="@+id/switch_ext_timer_query" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/switch_ext_timer_query"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option_ext_timer_query"
                app:layout_constraintBottom_toTopOf="@+id/switch_ext_direct_state_access" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/switch_ext_direct_state_access"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option_ext_direct_state_access"
                app:layout_constraintBottom_toTopOf="@id/switch_enable_fsr1"/>
            
            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/switch_enable_fsr1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option_enable_fsr1"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/open_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="6dp"
        android:text="@string/open_options" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>